src/objects/FW_logError__c.object
<CustomObject>
    <description>Object where system error messages will be stored</description>
    <fields>
        <fullName>FW_StackTrace__c</fullName>
        <description>Stack Trace returned by the system</description>
        <label>StackTrace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FW_aplicationCode__c</fullName>
        <description>Code of the application where the error is being generated</description>
        <label>Application Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FW_class__c</fullName>
        <description>Apex class where the error occurred</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FW_errorDate__c</fullName>
        <description>date the error occurs</description>
        <label>Error Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FW_errorMessage__c</fullName>
        <description>error message released by the system</description>
        <label>Error message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FW_errorUser__c</fullName>
        <description>User logged in that has produced the error</description>
        <label>Error User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FW_method__c</fullName>
        <description>Class method where the error occurs</description>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FW_aplicationCode__c</columns>
        <columns>FW_class__c</columns>
        <columns>FW_method__c</columns>
        <columns>FW_errorMessage__c</columns>
        <columns>FW_errorDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>App_DGS</fullName>
        <columns>NAME</columns>
        <columns>FW_aplicationCode__c</columns>
        <columns>FW_class__c</columns>
        <columns>FW_method__c</columns>
        <columns>FW_errorMessage__c</columns>
        <columns>FW_errorDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FW_aplicationCode__c</field>
            <operation>equals</operation>
            <value>DGS</value>
        </filters>
        <label>App DGS</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{000000000}</displayFormat>
        <label>Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <recordTypes>
        <fullName>FW_apexError</fullName>
        <active>true</active>
        <description>record type for apex errors</description>
        <label>Apex Error</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>